# stm_parser

./: .~lock.stm32_l0_l1_eeprom_research.csv#  ProductsList_L0.csv  ProductsList_L1.csv  add_csv.py  all_stm_products.parquet  check.py  debug_page_content.html  debug_page_content_no_table.html  eeprom_initial_attempt.patch  fix_csv.py  json_check.py  list.py  main.py  pyproject.toml  shorter_one.csv  stm32_l0_l1_eeprom_research.csv  update.py
excel/: ProductsList_L0.xlsx  ProductsList_L1.xlsx
