[project]
name = "stm-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
]
